updates to def files and move to java17